--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       var url = $(this).children("[name=url]").val();
       var pass = $(this).children("[name=pass]").val();
       ApplicationFork
-        .get("auth",{url:url,pass:pass})
+        .get("tunnelclient-auth",{url:url,pass:pass})
         .then(function(result){
           $("ul").append("<li>connected to "+url+" as: "+result+"</li>")
         }).catch(alert);
